# Aware-Homography

./: .gitignore  Makefile  README.md  demo.py  evaluate.py  inference.py  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
data/eval/: README.txt
data/videos/: README.txt
deep_homography/: __init__.py  cli.py
deep_homography/data/: __init__.py  augmentations.py  video_dataset.py
deep_homography/losses/: __init__.py  total_loss.py
deep_homography/models/: __init__.py  correlation.py  differentiable_dlt.py  feature_extractor.py  homography_net.py  iterative_refiner.py  plane_mask_head.py
deep_homography/utils/: __init__.py  homography_utils.py  metrics.py  visualization.py
scripts/: check_install.py  prepare_eval_data.py
tests/: conftest.py  test_models.py
